tests/fixtures/errors/reserved_member_release.z
# reserved_member_release.z -- a union arm named `release` is rejected (E0037).

state: union {
    release: null
    held: null
}

main: function is {
    print "unreachable"
}
